resources/kubernetes/iss-health-check.yaml
# If GCP is being used to store keys, this deployment will only be usable in a GCP environment due to the GCP Secret Manager dependency
apiVersion: 'apps/v1'
kind: 'Deployment'
metadata:
  name: 'iss-health-check'
  labels:
    app: 'iss-health-check'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: 'iss-health-check'
  template:
    metadata:
      labels:
        app: 'iss-health-check'
    spec:
      containers:
        - name: 'iss-health-check'
          imagePullPolicy: Always
          # Replace image with an actual built iss-health-check image from an image repository
          image: 'iss-health-check-image'
          resources:
            requests:
              memory: '1Gi'
              cpu: '0.5'
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: cv-manager-service-key
              mountPath: /home/secret
          tty: true
          stdin: true
      volumes:
        - name: cv-manager-service-key
          secret:
            secretName: cv-manager-service-key
