resources/kubernetes/cv-manager-postgres.yaml
# Internal load balancer for accessing the PostgreSQL DB
apiVersion: v1
kind: Service
metadata:
  name: cv-manager-postgres-svc
  annotations:
    networking.gke.io/load-balancer-type: 'Internal'
  labels:
    app: cv-manager-postgres
spec:
  type: LoadBalancer
  ports:
    - name: postgres-endpoint
      port: 5432
  selector:
    app: cv-manager-postgres
---
apiVersion: 'apps/v1'
kind: 'Deployment'
metadata:
  name: 'cv-manager-postgres'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: 'cv-manager-postgres'
  template:
    metadata:
      labels:
        app: 'cv-manager-postgres'
    spec:
      volumes:
        - name: cv-manager-postgres-volume
          persistentVolumeClaim:
            claimName: cv-manager-postgres-claim
        - name: cv-manager-init-tables
          configMap:
            name: pg-init-tables
      containers:
        - name: 'cv-manager-postgis'
          imagePullPolicy: Always
          # Do not update this postgis image, this is using the official image
          image: postgis/postgis:latest
          resources:
            requests:
              memory: '4Gi'
              cpu: '1'
              ephemeral-storage: '4Gi'
            limits:
              memory: '4Gi'
              cpu: '1'
              ephemeral-storage: '4Gi'
          tty: true
          stdin: true
          volumeMounts:
            - name: cv-manager-postgres-volume
              mountPath: /var/lib/postgresql/data
            - name: cv-manager-init-tables
              mountPath: /docker-entrypoint-initdb.d
