resources/kubernetes/cv-manager-webapp.yaml
# NodePort to expose CV Manager web application
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cv-manager-webapp
  name: cv-manager-webapp-service-internal
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: cv-manager-webapp
  type: NodePort
---
# External HTTP/HTTPS Ingress to internal NodePort
# Requires 'cv-manager-ip' as a global static external IP to be reserved
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cv-manager-webapp-ingress
  labels:
    app: cv-manager-webapp
  annotations:
    kubernetes.io/ingress.regional-static-ip-name: 'cv-manager-ip'
    networking.gke.io/managed-certificates: 'cv-manager-webapp-managed-cert'
    networking.gke.io/v1beta1.FrontendConfig: 'cv-manager-webapp-frontend'
spec:
  defaultBackend:
    service:
      name: cv-manager-webapp-service-internal
      port:
        number: 80
---
apiVersion: 'apps/v1'
kind: 'Deployment'
metadata:
  name: cv-manager-webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cv-manager-webapp
  template:
    metadata:
      labels:
        app: cv-manager-webapp
    spec:
      containers:
        - name: cv-manager-webapp
          imagePullPolicy: Always
          # Replace image with an actual built jpo-cvmanager webapp image from an image repository
          image: jpoode-cvmanager-webapp:tag
          resources:
            requests:
              memory: '4Gi'
              cpu: '2'
              ephemeral-storage: '4Gi'
            limits:
              memory: '4Gi'
              cpu: '2'
              ephemeral-storage: '4Gi'
          tty: true
          stdin: true
          ports:
            - containerPort: 80
