resources/kubernetes/obu-ota-server.yaml
# NodePort to expose CV Manager web application
apiVersion: v1
kind: Service
metadata:
  labels:
    app: obu-ota-server
  name: obu-ota-server-service-internal
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: obu-ota-server
  type: NodePort
---
# External HTTP/HTTPS Ingress to internal NodePort
# Requires 'cv-manager-ip' as a global static external IP to be reserved
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: obu-ota-server-ingress
  labels:
    app: obu-ota-server
  annotations:
    kubernetes.io/ingress.regional-static-ip-name: 'cv-manager-ip'
    networking.gke.io/managed-certificates: 'obu-ota-server-managed-cert'
    networking.gke.io/v1beta1.FrontendConfig: 'obu-ota-server-frontend'
spec:
  defaultBackend:
    service:
      name: obu-ota-server-service-internal
      port:
        number: 80

  ingressClassName: nginx
  rules:
    - host: foo.bar.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: http-svc
                port:
                  number: 80
---
apiVersion: 'apps/v1'
kind: 'Deployment'
metadata:
  name: obu-ota-server
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: obu-ota-server
  template:
    metadata:
      labels:
        app: obu-ota-server
    spec:
      containers:
        - name: obu-ota-server
          imagePullPolicy: Always
          image: 'iss-health-check-image'
          resources:
            requests:
              memory: 512Mi
              cpu: 1
            limits:
              memory: 1Gi
              cpu: 1
          tty: true
          stdin: true
          ports:
            - containerPort: 8085
          volumeMounts:
            - name: cv-manager-service-key
              mountPath: /home/secret
            - name: firmware-folder
              mountPath: '/firmwares/'
      volumes:
        - name: cv-manager-service-key
          secret:
            secretName: cv-manager-service-key
        - name: firmware-folder
          persistentVolumeClaim:
            claimName: obu-ota-server-claim
